variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: '=' expected but ';' found.
count=0
^