variables.Variables.scala.code
var count
count=0
while(!estSurBiscuit)
	{
    avance()
    count=count+1
  }
while(count!=0)
	{
		recule{}
    count=count-1
  }
